<resources>
    <string name="app_name">Climate</string>
    <string name="default_location">Fetching Location</string>
    <string name="default_temp">NA°</string>
    <string name="change_city_description">Click Here to Change City</string>
    <string name="weather_description">This is the weather symbol</string>
    <string name="back_button_description">Dismiss Change City Screen</string>
    <string name="get_weather">Change City</string>
    <string name="default_query">Enter city name</string>
    <string name="latitude_value">Latitude value</string>
    <string name="longitude_value">Longitude Value</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
</resources>
